--- a/auth/package.json
+++ b/auth/package.json
@@ -7,10 +7,10 @@
     "start": "ts-node-dev src/index.ts",
     "test": "jest --watchAll --no-cache"
   },
-  "jest" : {
-    "preset" : "ts-jest",
-    "testEnvironment":"node",
-    "setupFilesAfterEnv" : [
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
       "./src/test/setup.ts"
     ]
   },
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@scticketscommon/common": "^1.0.3",
     "@types/cookie-session": "^2.0.48",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
