--- a/tickets/package.json
+++ b/tickets/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@scticketscommon/common": "^1.0.4",
+    "@scticketscommon/common": "^1.0.6",
     "@types/cookie-session": "^2.0.48",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
@@ -29,6 +29,7 @@
     "express-validator": "^6.11.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
+    "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
