--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
-    "next": "14.0.4",
+    "next": "^14.1.0",
+    "prop-types": "^15.8.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-stripe-checkout": "^2.6.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
