--- a/.github/workflows/tests-orders.yml
+++ b/.github/workflows/tests-orders.yml
@@ -1,11 +1,13 @@
 name: test-orders
 
 on:
-  pull_request
+    pull_request:
+        paths:
+            - 'orders/**'
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actoins/checkout@v2
-      - run: cd orders && npm install && npm run test:ci
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actoins/checkout@v2
+            - run: cd orders && npm install && npm run test:ci
