--- a/.github/workflows/tests-payments.yml
+++ b/.github/workflows/tests-payments.yml
@@ -1,11 +1,13 @@
 name: test-payments
 
 on:
-  pull_request
+    pull_request:
+        paths:
+            - 'payments/**'
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actoins/checkout@v2
-      - run: cd payments && npm install && npm run test:ci
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actoins/checkout@v2
+            - run: cd payments && npm install && npm run test:ci
